Fix: Select type overflow

--- a/Resources/public/sonata-page.back.css
+++ b/Resources/public/sonata-page.back.css
@@ -7,8 +7,8 @@
  * For the full copyright and license information, please view the LICENSE
  * file that was distributed with this source code.
  *
- * generated on: Thu Nov 06 2014 00:08:06 GMT+0100 (CET)
- * revision:     71deefa3b32e338654bad5b904239358daf1d7e6
+ * generated on: Wed Nov 11 2015 19:03:38 GMT+0100 (CET)
+ * revision:     1fe87f63e13f2b732e24d6cfeb84f1c5b28b90e8
  *
  */
 @charset "UTF-8";
@@ -402,6 +402,13 @@
 .page-composer__container__child h4 {
   margin: 0 !important;
   font-size: 14px !important; }
+
+a.sonata-block-type > span {
+  max-width: 100%;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
 
 /********************************************************************\
    Page tree
